--- a/basicuserinfo.doc.html
+++ b/basicuserinfo.doc.html
@@ -389,7 +389,15 @@
             </a>
             Require by
         </h2>
-        <ul class="require-by"><li><a href="resource.doc.html" title="Resource - ">Resource<em>null</em></a><li><li><a href="resourcecard.doc.html" title="ResourceCard - ">ResourceCard<em>null</em></a><li><li><a href="resourceupdate.doc.html" title="ResourceUpdate - ">ResourceUpdate<em>null</em></a><li><li><a href="resourceview.doc.html" title="ResourceView - ">ResourceView<em>null</em></a><li></ul>
+        <ul class="require-by"><li><a href="resource.doc.html" title="Resource - MongoDB/GraphQL Resource model
+
+Modelo de Recurso de MongoDB/GraphQL">Resource<em>MongoDB/GraphQL Resource model
+
+Modelo de Recurso de MongoDB/GraphQL</em></a><li><li><a href="resourcecard.doc.html" title="ResourceCard - A subset of the resource information for showing the current status of the resource for the logged in user
+
+Un subconjunto de la información del recurso para mostrar el estado actual del recurso para el usuario de la sesión">ResourceCard<em>A subset of the resource information for showing the current status of the resource for the logged in user
+
+Un subconjunto de la información del recurso para mostrar el estado actual del recurso para el usuario de la sesión</em></a><li><li><a href="resourceupdate.doc.html" title="ResourceUpdate - ">ResourceUpdate<em>null</em></a><li><li><a href="resourceview.doc.html" title="ResourceView - ">ResourceView<em>null</em></a><li></ul>
     </div>
 </section>
 <footer>
