--- a/date.doc.html
+++ b/date.doc.html
@@ -367,7 +367,9 @@
     <div class="container">
         <p class="slds-text-title--caps slds-text-color--weak">SCALAR</p>
         <h1 class="slds-text-heading--large">Date</h1>
-        <div class="slds-text-body--regular"></div>
+        <div class="slds-text-body--regular"><p>Custom scalar for dates</p>
+<p>Escalar personalizado para fechas</p>
+</div>
     </div>
 </section>
 <section>
@@ -389,7 +391,31 @@
             </a>
             Require by
         </h2>
-        <ul class="require-by"><li><a href="resource.doc.html" title="Resource - ">Resource<em>null</em></a><li><li><a href="resourcecard.doc.html" title="ResourceCard - ">ResourceCard<em>null</em></a><li><li><a href="resourcenotification.doc.html" title="ResourceNotification - ">ResourceNotification<em>null</em></a><li><li><a href="resourceupdate.doc.html" title="ResourceUpdate - ">ResourceUpdate<em>null</em></a><li><li><a href="resourceview.doc.html" title="ResourceView - ">ResourceView<em>null</em></a><li><li><a href="ticket.doc.html" title="Ticket - ">Ticket<em>null</em></a><li><li><a href="ticketstatus.doc.html" title="TicketStatus - ">TicketStatus<em>null</em></a><li><li><a href="ticketview.doc.html" title="TicketView - ">TicketView<em>null</em></a><li><li><a href="user.doc.html" title="User - ">User<em>null</em></a><li></ul>
+        <ul class="require-by"><li><a href="resource.doc.html" title="Resource - MongoDB/GraphQL Resource model
+
+Modelo de Recurso de MongoDB/GraphQL">Resource<em>MongoDB/GraphQL Resource model
+
+Modelo de Recurso de MongoDB/GraphQL</em></a><li><li><a href="resourcecard.doc.html" title="ResourceCard - A subset of the resource information for showing the current status of the resource for the logged in user
+
+Un subconjunto de la información del recurso para mostrar el estado actual del recurso para el usuario de la sesión">ResourceCard<em>A subset of the resource information for showing the current status of the resource for the logged in user
+
+Un subconjunto de la información del recurso para mostrar el estado actual del recurso para el usuario de la sesión</em></a><li><li><a href="resourcenotification.doc.html" title="ResourceNotification - MongoDB/GraphQL Resource Notification model
+
+Modelo de Notificación de Recurso de MongoDB/GraphQL">ResourceNotification<em>MongoDB/GraphQL Resource Notification model
+
+Modelo de Notificación de Recurso de MongoDB/GraphQL</em></a><li><li><a href="resourceupdate.doc.html" title="ResourceUpdate - ">ResourceUpdate<em>null</em></a><li><li><a href="resourceview.doc.html" title="ResourceView - ">ResourceView<em>null</em></a><li><li><a href="ticket.doc.html" title="Ticket - MongoDB/GraphQL Ticket embedded model that stores the state machine status for a given user
+
+Modelo embebido de Ticket de MongoDB/GraphQL que guarda el estado de la máquina de estados para un usuario">Ticket<em>MongoDB/GraphQL Ticket embedded model that stores the state machine status for a given user
+
+Modelo embebido de Ticket de MongoDB/GraphQL que guarda el estado de la máquina de estados para un usuario</em></a><li><li><a href="ticketstatus.doc.html" title="TicketStatus - MongoDB/GraphQL TicketStatus embedded model
+
+Modelo embebido de estado de Ticket de MongoDB/GraphQL">TicketStatus<em>MongoDB/GraphQL TicketStatus embedded model
+
+Modelo embebido de estado de Ticket de MongoDB/GraphQL</em></a><li><li><a href="ticketview.doc.html" title="TicketView - ">TicketView<em>null</em></a><li><li><a href="user.doc.html" title="User - MongoDB/GraphQL User model
+
+Modelo de Usuario de MongoDB/GraphQL">User<em>MongoDB/GraphQL User model
+
+Modelo de Usuario de MongoDB/GraphQL</em></a><li></ul>
     </div>
 </section>
 <footer>
