--- a/errorcode.doc.html
+++ b/errorcode.doc.html
@@ -367,7 +367,9 @@
     <div class="container">
         <p class="slds-text-title--caps slds-text-color--weak">ENUM</p>
         <h1 class="slds-text-heading--large">ErrorCode</h1>
-        <div class="slds-text-body--regular"></div>
+        <div class="slds-text-body--regular"><p>Error codes enumeration</p>
+<p>Enumerador de códigos de error</p>
+</div>
     </div>
 </section>
 <section>
