--- a/int.doc.html
+++ b/int.doc.html
@@ -390,7 +390,19 @@
             </a>
             Require by
         </h2>
-        <ul class="require-by"><li><a href="inputresource.doc.html" title="InputResource - ">InputResource<em>null</em></a><li><li><a href="resource.doc.html" title="Resource - ">Resource<em>null</em></a><li><li><a href="resourcecard.doc.html" title="ResourceCard - ">ResourceCard<em>null</em></a><li><li><a href="resourceview.doc.html" title="ResourceView - ">ResourceView<em>null</em></a><li><li><a href="ticketstatus.doc.html" title="TicketStatus - ">TicketStatus<em>null</em></a><li></ul>
+        <ul class="require-by"><li><a href="inputresource.doc.html" title="InputResource - ">InputResource<em>null</em></a><li><li><a href="resource.doc.html" title="Resource - MongoDB/GraphQL Resource model
+
+Modelo de Recurso de MongoDB/GraphQL">Resource<em>MongoDB/GraphQL Resource model
+
+Modelo de Recurso de MongoDB/GraphQL</em></a><li><li><a href="resourcecard.doc.html" title="ResourceCard - A subset of the resource information for showing the current status of the resource for the logged in user
+
+Un subconjunto de la información del recurso para mostrar el estado actual del recurso para el usuario de la sesión">ResourceCard<em>A subset of the resource information for showing the current status of the resource for the logged in user
+
+Un subconjunto de la información del recurso para mostrar el estado actual del recurso para el usuario de la sesión</em></a><li><li><a href="resourceview.doc.html" title="ResourceView - ">ResourceView<em>null</em></a><li><li><a href="ticketstatus.doc.html" title="TicketStatus - MongoDB/GraphQL TicketStatus embedded model
+
+Modelo embebido de estado de Ticket de MongoDB/GraphQL">TicketStatus<em>MongoDB/GraphQL TicketStatus embedded model
+
+Modelo embebido de estado de Ticket de MongoDB/GraphQL</em></a><li></ul>
     </div>
 </section>
 <footer>
