--- a/operationresult.doc.html
+++ b/operationresult.doc.html
@@ -367,7 +367,9 @@
     <div class="container">
         <p class="slds-text-title--caps slds-text-color--weak">ENUM</p>
         <h1 class="slds-text-heading--large">OperationResult</h1>
-        <div class="slds-text-body--regular"></div>
+        <div class="slds-text-body--regular"><p>Operation result enumerator used for all mutations to return the operation outcome</p>
+<p>Enumerador de resultados de operación usado con todas las mutaciones para devolver el estado de ésta</p>
+</div>
     </div>
 </section>
 <section>
