--- a/resource.doc.html
+++ b/resource.doc.html
@@ -367,7 +367,9 @@
     <div class="container">
         <p class="slds-text-title--caps slds-text-color--weak">OBJECT</p>
         <h1 class="slds-text-heading--large">Resource</h1>
-        <div class="slds-text-body--regular"></div>
+        <div class="slds-text-body--regular"><p>MongoDB/GraphQL Resource model</p>
+<p>Modelo de Recurso de MongoDB/GraphQL</p>
+</div>
     </div>
 </section>
 <section>
