--- a/resourcecard.doc.html
+++ b/resourcecard.doc.html
@@ -367,7 +367,9 @@
     <div class="container">
         <p class="slds-text-title--caps slds-text-color--weak">OBJECT</p>
         <h1 class="slds-text-heading--large">ResourceCard</h1>
-        <div class="slds-text-body--regular"></div>
+        <div class="slds-text-body--regular"><p>A subset of the resource information for showing the current status of the resource for the logged in user</p>
+<p>Un subconjunto de la información del recurso para mostrar el estado actual del recurso para el usuario de la sesión</p>
+</div>
     </div>
 </section>
 <section>
@@ -389,7 +391,15 @@
             </a>
             Require by
         </h2>
-        <ul class="require-by"><li><a href="query.doc.html" title="Query - ">Query<em>null</em></a><li><li><a href="resourcemanagementresult.doc.html" title="ResourceManagementResult - ">ResourceManagementResult<em>null</em></a><li><li><a href="subscription.doc.html" title="Subscription - ">Subscription<em>null</em></a><li></ul>
+        <ul class="require-by"><li><a href="query.doc.html" title="Query - Query operations for Allotr API
+
+Operaciones de consulta de la API Allotr">Query<em>Query operations for Allotr API
+
+Operaciones de consulta de la API Allotr</em></a><li><li><a href="resourcemanagementresult.doc.html" title="ResourceManagementResult - ">ResourceManagementResult<em>null</em></a><li><li><a href="subscription.doc.html" title="Subscription - Subscription operations for Allotr API
+
+Operaciones de suscripción de la API Allotr">Subscription<em>Subscription operations for Allotr API
+
+Operaciones de suscripción de la API Allotr</em></a><li></ul>
     </div>
 </section>
 <footer>
