--- a/resourceupdate.doc.html
+++ b/resourceupdate.doc.html
@@ -389,7 +389,11 @@
             </a>
             Require by
         </h2>
-        <ul class="require-by"><li><a href="subscription.doc.html" title="Subscription - ">Subscription<em>null</em></a><li></ul>
+        <ul class="require-by"><li><a href="subscription.doc.html" title="Subscription - Subscription operations for Allotr API
+
+Operaciones de suscripción de la API Allotr">Subscription<em>Subscription operations for Allotr API
+
+Operaciones de suscripción de la API Allotr</em></a><li></ul>
     </div>
 </section>
 <footer>
