--- a/user.doc.html
+++ b/user.doc.html
@@ -367,7 +367,9 @@
     <div class="container">
         <p class="slds-text-title--caps slds-text-color--weak">OBJECT</p>
         <h1 class="slds-text-heading--large">User</h1>
-        <div class="slds-text-body--regular"></div>
+        <div class="slds-text-body--regular"><p>MongoDB/GraphQL User model</p>
+<p>Modelo de Usuario de MongoDB/GraphQL</p>
+</div>
     </div>
 </section>
 <section>
@@ -389,7 +391,11 @@
             </a>
             Require by
         </h2>
-        <ul class="require-by"><li><a href="query.doc.html" title="Query - ">Query<em>null</em></a><li></ul>
+        <ul class="require-by"><li><a href="query.doc.html" title="Query - Query operations for Allotr API
+
+Operaciones de consulta de la API Allotr">Query<em>Query operations for Allotr API
+
+Operaciones de consulta de la API Allotr</em></a><li></ul>
     </div>
 </section>
 <footer>
