--- a/webpushkeys.doc.html
+++ b/webpushkeys.doc.html
@@ -389,7 +389,11 @@
             </a>
             Require by
         </h2>
-        <ul class="require-by"><li><a href="webpushsubscription.doc.html" title="WebPushSubscription - ">WebPushSubscription<em>null</em></a><li></ul>
+        <ul class="require-by"><li><a href="webpushsubscription.doc.html" title="WebPushSubscription - WebPush Subscription Model
+
+Modelo de suscripciones WebPush">WebPushSubscription<em>WebPush Subscription Model
+
+Modelo de suscripciones WebPush</em></a><li></ul>
     </div>
 </section>
 <footer>
