--- a/webpushsubscription.doc.html
+++ b/webpushsubscription.doc.html
@@ -367,7 +367,9 @@
     <div class="container">
         <p class="slds-text-title--caps slds-text-color--weak">OBJECT</p>
         <h1 class="slds-text-heading--large">WebPushSubscription</h1>
-        <div class="slds-text-body--regular"></div>
+        <div class="slds-text-body--regular"><p>WebPush Subscription Model</p>
+<p>Modelo de suscripciones WebPush</p>
+</div>
     </div>
 </section>
 <section>
@@ -389,7 +391,11 @@
             </a>
             Require by
         </h2>
-        <ul class="require-by"><li><a href="user.doc.html" title="User - ">User<em>null</em></a><li></ul>
+        <ul class="require-by"><li><a href="user.doc.html" title="User - MongoDB/GraphQL User model
+
+Modelo de Usuario de MongoDB/GraphQL">User<em>MongoDB/GraphQL User model
+
+Modelo de Usuario de MongoDB/GraphQL</em></a><li></ul>
     </div>
 </section>
 <footer>
