--- a/boolean.doc.html
+++ b/boolean.doc.html
@@ -390,7 +390,11 @@
             </a>
             Require by
         </h2>
-        <ul class="require-by"><li><a href="mutation.doc.html" title="Mutation - ">Mutation<em>null</em></a><li><li><a href="userpreferences.doc.html" title="UserPreferences - ">UserPreferences<em>null</em></a><li><li><a href="directive.spec.html" title="__Directive - A Directive provides a way to describe alternate runtime execution and type validation behavior in a GraphQL document.
+        <ul class="require-by"><li><a href="mutation.doc.html" title="Mutation - Mutation operations for Allotr API
+
+Operaciones de mutación de la API Allotr">Mutation<em>Mutation operations for Allotr API
+
+Operaciones de mutación de la API Allotr</em></a><li><li><a href="userpreferences.doc.html" title="UserPreferences - ">UserPreferences<em>null</em></a><li><li><a href="directive.spec.html" title="__Directive - A Directive provides a way to describe alternate runtime execution and type validation behavior in a GraphQL document.
 
 In some cases, you need to provide options to alter GraphQL's execution behavior in ways field arguments will not suffice, such as conditionally including or skipping a field. Directives provide this by describing additional information to the executor.">__Directive<em>A Directive provides a way to describe alternate runtime execution and type validation behavior in a GraphQL document.
 
