--- a/deletionresult.doc.html
+++ b/deletionresult.doc.html
@@ -389,7 +389,11 @@
             </a>
             Require by
         </h2>
-        <ul class="require-by"><li><a href="mutation.doc.html" title="Mutation - ">Mutation<em>null</em></a><li></ul>
+        <ul class="require-by"><li><a href="mutation.doc.html" title="Mutation - Mutation operations for Allotr API
+
+Operaciones de mutación de la API Allotr">Mutation<em>Mutation operations for Allotr API
+
+Operaciones de mutación de la API Allotr</em></a><li></ul>
     </div>
 </section>
 <footer>
