--- a/notificationuserinfo.doc.html
+++ b/notificationuserinfo.doc.html
@@ -367,7 +367,9 @@
     <div class="container">
         <p class="slds-text-title--caps slds-text-color--weak">OBJECT</p>
         <h1 class="slds-text-heading--large">NotificationUserInfo</h1>
-        <div class="slds-text-body--regular"></div>
+        <div class="slds-text-body--regular"><p>MongoDB/GraphQL Notification User Information embedded model</p>
+<p>Modelo embebido de Información de Usuario de notificación de MongoDB/GraphQL</p>
+</div>
     </div>
 </section>
 <section>
@@ -389,7 +391,15 @@
             </a>
             Require by
         </h2>
-        <ul class="require-by"><li><a href="notificationresourcedata.doc.html" title="NotificationResourceData - ">NotificationResourceData<em>null</em></a><li><li><a href="resourcenotification.doc.html" title="ResourceNotification - ">ResourceNotification<em>null</em></a><li></ul>
+        <ul class="require-by"><li><a href="notificationresourcedata.doc.html" title="NotificationResourceData - MongoDB/GraphQL Notification Resource data embedded model
+
+Modelo embebido de datos de Recurso de Notificación de MongoDB/GraphQL">NotificationResourceData<em>MongoDB/GraphQL Notification Resource data embedded model
+
+Modelo embebido de datos de Recurso de Notificación de MongoDB/GraphQL</em></a><li><li><a href="resourcenotification.doc.html" title="ResourceNotification - MongoDB/GraphQL Resource Notification model
+
+Modelo de Notificación de Recurso de MongoDB/GraphQL">ResourceNotification<em>MongoDB/GraphQL Resource Notification model
+
+Modelo de Notificación de Recurso de MongoDB/GraphQL</em></a><li></ul>
     </div>
 </section>
 <footer>
