--- a/resourceview.doc.html
+++ b/resourceview.doc.html
@@ -389,7 +389,11 @@
             </a>
             Require by
         </h2>
-        <ul class="require-by"><li><a href="query.doc.html" title="Query - ">Query<em>null</em></a><li><li><a href="resourcemanagementresult.doc.html" title="ResourceManagementResult - ">ResourceManagementResult<em>null</em></a><li></ul>
+        <ul class="require-by"><li><a href="query.doc.html" title="Query - Query operations for Allotr API
+
+Operaciones de consulta de la API Allotr">Query<em>Query operations for Allotr API
+
+Operaciones de consulta de la API Allotr</em></a><li><li><a href="resourcemanagementresult.doc.html" title="ResourceManagementResult - ">ResourceManagementResult<em>null</em></a><li></ul>
     </div>
 </section>
 <footer>
