--- a/string.doc.html
+++ b/string.doc.html
@@ -390,7 +390,51 @@
             </a>
             Require by
         </h2>
-        <ul class="require-by"><li><a href="additionalentityfields.doc.html" title="AdditionalEntityFields - ">AdditionalEntityFields<em>null</em></a><li><li><a href="basicuserinfo.doc.html" title="BasicUserInfo - ">BasicUserInfo<em>null</em></a><li><li><a href="creationresult.doc.html" title="CreationResult - ">CreationResult<em>null</em></a><li><li><a href="deletionresult.doc.html" title="DeletionResult - ">DeletionResult<em>null</em></a><li><li><a href="inputresource.doc.html" title="InputResource - ">InputResource<em>null</em></a><li><li><a href="mutation.doc.html" title="Mutation - ">Mutation<em>null</em></a><li><li><a href="notificationresourcedata.doc.html" title="NotificationResourceData - ">NotificationResourceData<em>null</em></a><li><li><a href="notificationuserinfo.doc.html" title="NotificationUserInfo - ">NotificationUserInfo<em>null</em></a><li><li><a href="oauthids.doc.html" title="OauthIds - ">OauthIds<em>null</em></a><li><li><a href="publicuser.doc.html" title="PublicUser - ">PublicUser<em>null</em></a><li><li><a href="query.doc.html" title="Query - ">Query<em>null</em></a><li><li><a href="resource.doc.html" title="Resource - ">Resource<em>null</em></a><li><li><a href="resourcecard.doc.html" title="ResourceCard - ">ResourceCard<em>null</em></a><li><li><a href="resourcemanagementresult.doc.html" title="ResourceManagementResult - ">ResourceManagementResult<em>null</em></a><li><li><a href="resourcenotification.doc.html" title="ResourceNotification - ">ResourceNotification<em>null</em></a><li><li><a href="resourceupdate.doc.html" title="ResourceUpdate - ">ResourceUpdate<em>null</em></a><li><li><a href="resourceuser.doc.html" title="ResourceUser - ">ResourceUser<em>null</em></a><li><li><a href="resourceview.doc.html" title="ResourceView - ">ResourceView<em>null</em></a><li><li><a href="ticket.doc.html" title="Ticket - ">Ticket<em>null</em></a><li><li><a href="ticketuserinfo.doc.html" title="TicketUserInfo - ">TicketUserInfo<em>null</em></a><li><li><a href="ticketview.doc.html" title="TicketView - ">TicketView<em>null</em></a><li><li><a href="ticketviewuserinfo.doc.html" title="TicketViewUserInfo - ">TicketViewUserInfo<em>null</em></a><li><li><a href="updateresult.doc.html" title="UpdateResult - ">UpdateResult<em>null</em></a><li><li><a href="user.doc.html" title="User - ">User<em>null</em></a><li><li><a href="userdeletionresult.doc.html" title="UserDeletionResult - ">UserDeletionResult<em>null</em></a><li><li><a href="webpushkeys.doc.html" title="WebPushKeys - ">WebPushKeys<em>null</em></a><li><li><a href="webpushsubscription.doc.html" title="WebPushSubscription - ">WebPushSubscription<em>null</em></a><li><li><a href="directive.spec.html" title="__Directive - A Directive provides a way to describe alternate runtime execution and type validation behavior in a GraphQL document.
+        <ul class="require-by"><li><a href="additionalentityfields.doc.html" title="AdditionalEntityFields - ">AdditionalEntityFields<em>null</em></a><li><li><a href="basicuserinfo.doc.html" title="BasicUserInfo - ">BasicUserInfo<em>null</em></a><li><li><a href="creationresult.doc.html" title="CreationResult - ">CreationResult<em>null</em></a><li><li><a href="deletionresult.doc.html" title="DeletionResult - ">DeletionResult<em>null</em></a><li><li><a href="inputresource.doc.html" title="InputResource - ">InputResource<em>null</em></a><li><li><a href="mutation.doc.html" title="Mutation - Mutation operations for Allotr API
+
+Operaciones de mutación de la API Allotr">Mutation<em>Mutation operations for Allotr API
+
+Operaciones de mutación de la API Allotr</em></a><li><li><a href="notificationresourcedata.doc.html" title="NotificationResourceData - MongoDB/GraphQL Notification Resource data embedded model
+
+Modelo embebido de datos de Recurso de Notificación de MongoDB/GraphQL">NotificationResourceData<em>MongoDB/GraphQL Notification Resource data embedded model
+
+Modelo embebido de datos de Recurso de Notificación de MongoDB/GraphQL</em></a><li><li><a href="notificationuserinfo.doc.html" title="NotificationUserInfo - MongoDB/GraphQL Notification User Information embedded model
+
+Modelo embebido de Información de Usuario de notificación de MongoDB/GraphQL">NotificationUserInfo<em>MongoDB/GraphQL Notification User Information embedded model
+
+Modelo embebido de Información de Usuario de notificación de MongoDB/GraphQL</em></a><li><li><a href="oauthids.doc.html" title="OauthIds - ">OauthIds<em>null</em></a><li><li><a href="publicuser.doc.html" title="PublicUser - ">PublicUser<em>null</em></a><li><li><a href="query.doc.html" title="Query - Query operations for Allotr API
+
+Operaciones de consulta de la API Allotr">Query<em>Query operations for Allotr API
+
+Operaciones de consulta de la API Allotr</em></a><li><li><a href="resource.doc.html" title="Resource - MongoDB/GraphQL Resource model
+
+Modelo de Recurso de MongoDB/GraphQL">Resource<em>MongoDB/GraphQL Resource model
+
+Modelo de Recurso de MongoDB/GraphQL</em></a><li><li><a href="resourcecard.doc.html" title="ResourceCard - A subset of the resource information for showing the current status of the resource for the logged in user
+
+Un subconjunto de la información del recurso para mostrar el estado actual del recurso para el usuario de la sesión">ResourceCard<em>A subset of the resource information for showing the current status of the resource for the logged in user
+
+Un subconjunto de la información del recurso para mostrar el estado actual del recurso para el usuario de la sesión</em></a><li><li><a href="resourcemanagementresult.doc.html" title="ResourceManagementResult - ">ResourceManagementResult<em>null</em></a><li><li><a href="resourcenotification.doc.html" title="ResourceNotification - MongoDB/GraphQL Resource Notification model
+
+Modelo de Notificación de Recurso de MongoDB/GraphQL">ResourceNotification<em>MongoDB/GraphQL Resource Notification model
+
+Modelo de Notificación de Recurso de MongoDB/GraphQL</em></a><li><li><a href="resourceupdate.doc.html" title="ResourceUpdate - ">ResourceUpdate<em>null</em></a><li><li><a href="resourceuser.doc.html" title="ResourceUser - ">ResourceUser<em>null</em></a><li><li><a href="resourceview.doc.html" title="ResourceView - ">ResourceView<em>null</em></a><li><li><a href="ticket.doc.html" title="Ticket - MongoDB/GraphQL Ticket embedded model that stores the state machine status for a given user
+
+Modelo embebido de Ticket de MongoDB/GraphQL que guarda el estado de la máquina de estados para un usuario">Ticket<em>MongoDB/GraphQL Ticket embedded model that stores the state machine status for a given user
+
+Modelo embebido de Ticket de MongoDB/GraphQL que guarda el estado de la máquina de estados para un usuario</em></a><li><li><a href="ticketuserinfo.doc.html" title="TicketUserInfo - MongoDB/GraphQL TicketUserInfo embedded model
+
+Modelo embebido de información de Usuario del Ticket de MongoDB/GraphQL">TicketUserInfo<em>MongoDB/GraphQL TicketUserInfo embedded model
+
+Modelo embebido de información de Usuario del Ticket de MongoDB/GraphQL</em></a><li><li><a href="ticketview.doc.html" title="TicketView - ">TicketView<em>null</em></a><li><li><a href="ticketviewuserinfo.doc.html" title="TicketViewUserInfo - ">TicketViewUserInfo<em>null</em></a><li><li><a href="updateresult.doc.html" title="UpdateResult - ">UpdateResult<em>null</em></a><li><li><a href="user.doc.html" title="User - MongoDB/GraphQL User model
+
+Modelo de Usuario de MongoDB/GraphQL">User<em>MongoDB/GraphQL User model
+
+Modelo de Usuario de MongoDB/GraphQL</em></a><li><li><a href="userdeletionresult.doc.html" title="UserDeletionResult - ">UserDeletionResult<em>null</em></a><li><li><a href="webpushkeys.doc.html" title="WebPushKeys - ">WebPushKeys<em>null</em></a><li><li><a href="webpushsubscription.doc.html" title="WebPushSubscription - WebPush Subscription Model
+
+Modelo de suscripciones WebPush">WebPushSubscription<em>WebPush Subscription Model
+
+Modelo de suscripciones WebPush</em></a><li><li><a href="directive.spec.html" title="__Directive - A Directive provides a way to describe alternate runtime execution and type validation behavior in a GraphQL document.
 
 In some cases, you need to provide options to alter GraphQL's execution behavior in ways field arguments will not suffice, such as conditionally including or skipping a field. Directives provide this by describing additional information to the executor.">__Directive<em>A Directive provides a way to describe alternate runtime execution and type validation behavior in a GraphQL document.
 
