--- a/userpreferences.doc.html
+++ b/userpreferences.doc.html
@@ -389,7 +389,11 @@
             </a>
             Require by
         </h2>
-        <ul class="require-by"><li><a href="user.doc.html" title="User - ">User<em>null</em></a><li></ul>
+        <ul class="require-by"><li><a href="user.doc.html" title="User - MongoDB/GraphQL User model
+
+Modelo de Usuario de MongoDB/GraphQL">User<em>MongoDB/GraphQL User model
+
+Modelo de Usuario de MongoDB/GraphQL</em></a><li></ul>
     </div>
 </section>
 <footer>
