feat: Add GraphiQL link

--- a/index.html
+++ b/index.html
@@ -356,6 +356,12 @@
     </nav>
     <main><section class="title slds-theme--inverse">
     <div class="container slds-grid">
+        <div class="slds-col--bump-left">
+            <a class="slds-button js-toggle-navigation" target="_blank" href="https://api.allotr.eu/graphql">
+                <span class="slds-text-title--caps">GraphiQL<span>
+                <i class="material-icons slds-button__icon slds-button__icon--rigth">open_in_new</i>
+            </span></span></a>
+        </div>
         <div>
         <button class="slds-button js-toggle-navigation less-than-medium">
             <i class="material-icons slds-button__icon slds-button__icon--left">menu</i>
