--- a/boolean.doc.html
+++ b/boolean.doc.html
@@ -290,49 +290,14 @@
 <div class="slds-grid slds-grid--vertical slds-navigation-list--vertical">
     <h4 class="slds-text-title--caps slds-p-around--medium">Directives</h4>
     <ul>
-        <li  title="abstractEntity">
-            <a href="abstractentity.doc.html" class="slds-navigation-list--vertical__action slds-text-link--reset slds-truncate">
-                abstractEntity
-            </a>
-        </li>
-        <li  title="column">
-            <a href="column.doc.html" class="slds-navigation-list--vertical__action slds-text-link--reset slds-truncate">
-                column
-            </a>
-        </li>
         <li  title="deprecated">
             <a href="deprecated.doc.html" class="slds-navigation-list--vertical__action slds-text-link--reset slds-truncate">
                 deprecated
             </a>
         </li>
-        <li  title="embedded">
-            <a href="embedded.doc.html" class="slds-navigation-list--vertical__action slds-text-link--reset slds-truncate">
-                embedded
-            </a>
-        </li>
-        <li  title="entity">
-            <a href="entity.doc.html" class="slds-navigation-list--vertical__action slds-text-link--reset slds-truncate">
-                entity
-            </a>
-        </li>
-        <li  title="id">
-            <a href="id.doc.html" class="slds-navigation-list--vertical__action slds-text-link--reset slds-truncate">
-                id
-            </a>
-        </li>
         <li  title="include">
             <a href="include.doc.html" class="slds-navigation-list--vertical__action slds-text-link--reset slds-truncate">
                 include
-            </a>
-        </li>
-        <li  title="link">
-            <a href="link.doc.html" class="slds-navigation-list--vertical__action slds-text-link--reset slds-truncate">
-                link
-            </a>
-        </li>
-        <li  title="map">
-            <a href="map.doc.html" class="slds-navigation-list--vertical__action slds-text-link--reset slds-truncate">
-                map
             </a>
         </li>
         <li  title="skip">
@@ -343,11 +308,6 @@
         <li  title="specifiedBy">
             <a href="specifiedby.doc.html" class="slds-navigation-list--vertical__action slds-text-link--reset slds-truncate">
                 specifiedBy
-            </a>
-        </li>
-        <li  title="union">
-            <a href="union.doc.html" class="slds-navigation-list--vertical__action slds-text-link--reset slds-truncate">
-                union
             </a>
         </li>
     </ul>
@@ -390,11 +350,7 @@
             </a>
             Require by
         </h2>
-        <ul class="require-by"><li><a href="mutation.doc.html" title="Mutation - Mutation operations for Allotr API
-
-Operaciones de mutación de la API Allotr">Mutation<em>Mutation operations for Allotr API
-
-Operaciones de mutación de la API Allotr</em></a><li><li><a href="userpreferences.doc.html" title="UserPreferences - ">UserPreferences<em>null</em></a><li><li><a href="directive.spec.html" title="__Directive - A Directive provides a way to describe alternate runtime execution and type validation behavior in a GraphQL document.
+        <ul class="require-by"><li><a href="mutation.doc.html" title="Mutation - ">Mutation<em>null</em></a><li><li><a href="userpreferences.doc.html" title="UserPreferences - ">UserPreferences<em>null</em></a><li><li><a href="directive.spec.html" title="__Directive - A Directive provides a way to describe alternate runtime execution and type validation behavior in a GraphQL document.
 
 In some cases, you need to provide options to alter GraphQL's execution behavior in ways field arguments will not suffice, such as conditionally including or skipping a field. Directives provide this by describing additional information to the executor.">__Directive<em>A Directive provides a way to describe alternate runtime execution and type validation behavior in a GraphQL document.
 
