--- a/resourcenotification.doc.html
+++ b/resourcenotification.doc.html
@@ -290,49 +290,14 @@
 <div class="slds-grid slds-grid--vertical slds-navigation-list--vertical">
     <h4 class="slds-text-title--caps slds-p-around--medium">Directives</h4>
     <ul>
-        <li  title="abstractEntity">
-            <a href="abstractentity.doc.html" class="slds-navigation-list--vertical__action slds-text-link--reset slds-truncate">
-                abstractEntity
-            </a>
-        </li>
-        <li  title="column">
-            <a href="column.doc.html" class="slds-navigation-list--vertical__action slds-text-link--reset slds-truncate">
-                column
-            </a>
-        </li>
         <li  title="deprecated">
             <a href="deprecated.doc.html" class="slds-navigation-list--vertical__action slds-text-link--reset slds-truncate">
                 deprecated
             </a>
         </li>
-        <li  title="embedded">
-            <a href="embedded.doc.html" class="slds-navigation-list--vertical__action slds-text-link--reset slds-truncate">
-                embedded
-            </a>
-        </li>
-        <li  title="entity">
-            <a href="entity.doc.html" class="slds-navigation-list--vertical__action slds-text-link--reset slds-truncate">
-                entity
-            </a>
-        </li>
-        <li  title="id">
-            <a href="id.doc.html" class="slds-navigation-list--vertical__action slds-text-link--reset slds-truncate">
-                id
-            </a>
-        </li>
         <li  title="include">
             <a href="include.doc.html" class="slds-navigation-list--vertical__action slds-text-link--reset slds-truncate">
                 include
-            </a>
-        </li>
-        <li  title="link">
-            <a href="link.doc.html" class="slds-navigation-list--vertical__action slds-text-link--reset slds-truncate">
-                link
-            </a>
-        </li>
-        <li  title="map">
-            <a href="map.doc.html" class="slds-navigation-list--vertical__action slds-text-link--reset slds-truncate">
-                map
             </a>
         </li>
         <li  title="skip">
@@ -343,11 +308,6 @@
         <li  title="specifiedBy">
             <a href="specifiedby.doc.html" class="slds-navigation-list--vertical__action slds-text-link--reset slds-truncate">
                 specifiedBy
-            </a>
-        </li>
-        <li  title="union">
-            <a href="union.doc.html" class="slds-navigation-list--vertical__action slds-text-link--reset slds-truncate">
-                union
             </a>
         </li>
     </ul>
@@ -391,15 +351,7 @@
             </a>
             Require by
         </h2>
-        <ul class="require-by"><li><a href="query.doc.html" title="Query - Query operations for Allotr API
-
-Operaciones de consulta de la API Allotr">Query<em>Query operations for Allotr API
-
-Operaciones de consulta de la API Allotr</em></a><li><li><a href="subscription.doc.html" title="Subscription - Subscription operations for Allotr API
-
-Operaciones de suscripción de la API Allotr">Subscription<em>Subscription operations for Allotr API
-
-Operaciones de suscripción de la API Allotr</em></a><li></ul>
+        <ul class="require-by"><li><a href="query.doc.html" title="Query - ">Query<em>null</em></a><li><li><a href="subscription.doc.html" title="Subscription - ">Subscription<em>null</em></a><li></ul>
     </div>
 </section>
 <footer>
