--- a/string.doc.html
+++ b/string.doc.html
@@ -290,49 +290,14 @@
 <div class="slds-grid slds-grid--vertical slds-navigation-list--vertical">
     <h4 class="slds-text-title--caps slds-p-around--medium">Directives</h4>
     <ul>
-        <li  title="abstractEntity">
-            <a href="abstractentity.doc.html" class="slds-navigation-list--vertical__action slds-text-link--reset slds-truncate">
-                abstractEntity
-            </a>
-        </li>
-        <li  title="column">
-            <a href="column.doc.html" class="slds-navigation-list--vertical__action slds-text-link--reset slds-truncate">
-                column
-            </a>
-        </li>
         <li  title="deprecated">
             <a href="deprecated.doc.html" class="slds-navigation-list--vertical__action slds-text-link--reset slds-truncate">
                 deprecated
             </a>
         </li>
-        <li  title="embedded">
-            <a href="embedded.doc.html" class="slds-navigation-list--vertical__action slds-text-link--reset slds-truncate">
-                embedded
-            </a>
-        </li>
-        <li  title="entity">
-            <a href="entity.doc.html" class="slds-navigation-list--vertical__action slds-text-link--reset slds-truncate">
-                entity
-            </a>
-        </li>
-        <li  title="id">
-            <a href="id.doc.html" class="slds-navigation-list--vertical__action slds-text-link--reset slds-truncate">
-                id
-            </a>
-        </li>
         <li  title="include">
             <a href="include.doc.html" class="slds-navigation-list--vertical__action slds-text-link--reset slds-truncate">
                 include
-            </a>
-        </li>
-        <li  title="link">
-            <a href="link.doc.html" class="slds-navigation-list--vertical__action slds-text-link--reset slds-truncate">
-                link
-            </a>
-        </li>
-        <li  title="map">
-            <a href="map.doc.html" class="slds-navigation-list--vertical__action slds-text-link--reset slds-truncate">
-                map
             </a>
         </li>
         <li  title="skip">
@@ -343,11 +308,6 @@
         <li  title="specifiedBy">
             <a href="specifiedby.doc.html" class="slds-navigation-list--vertical__action slds-text-link--reset slds-truncate">
                 specifiedBy
-            </a>
-        </li>
-        <li  title="union">
-            <a href="union.doc.html" class="slds-navigation-list--vertical__action slds-text-link--reset slds-truncate">
-                union
             </a>
         </li>
     </ul>
@@ -390,11 +350,7 @@
             </a>
             Require by
         </h2>
-        <ul class="require-by"><li><a href="additionalentityfields.doc.html" title="AdditionalEntityFields - ">AdditionalEntityFields<em>null</em></a><li><li><a href="basicuserinfo.doc.html" title="BasicUserInfo - ">BasicUserInfo<em>null</em></a><li><li><a href="creationresult.doc.html" title="CreationResult - ">CreationResult<em>null</em></a><li><li><a href="deletionresult.doc.html" title="DeletionResult - ">DeletionResult<em>null</em></a><li><li><a href="inputresource.doc.html" title="InputResource - ">InputResource<em>null</em></a><li><li><a href="mutation.doc.html" title="Mutation - Mutation operations for Allotr API
-
-Operaciones de mutación de la API Allotr">Mutation<em>Mutation operations for Allotr API
-
-Operaciones de mutación de la API Allotr</em></a><li><li><a href="notificationresourcedata.doc.html" title="NotificationResourceData - MongoDB/GraphQL Notification Resource data embedded model
+        <ul class="require-by"><li><a href="additionalentityfields.doc.html" title="AdditionalEntityFields - ">AdditionalEntityFields<em>null</em></a><li><li><a href="basicuserinfo.doc.html" title="BasicUserInfo - ">BasicUserInfo<em>null</em></a><li><li><a href="creationresult.doc.html" title="CreationResult - ">CreationResult<em>null</em></a><li><li><a href="deletionresult.doc.html" title="DeletionResult - ">DeletionResult<em>null</em></a><li><li><a href="inputresource.doc.html" title="InputResource - ">InputResource<em>null</em></a><li><li><a href="mutation.doc.html" title="Mutation - ">Mutation<em>null</em></a><li><li><a href="notificationresourcedata.doc.html" title="NotificationResourceData - MongoDB/GraphQL Notification Resource data embedded model
 
 Modelo embebido de datos de Recurso de Notificación de MongoDB/GraphQL">NotificationResourceData<em>MongoDB/GraphQL Notification Resource data embedded model
 
@@ -402,11 +358,7 @@ Modelo embebido de datos de Recurso de Notificación de MongoDB/GraphQL</em></a>
 
 Modelo embebido de Información de Usuario de notificación de MongoDB/GraphQL">NotificationUserInfo<em>MongoDB/GraphQL Notification User Information embedded model
 
-Modelo embebido de Información de Usuario de notificación de MongoDB/GraphQL</em></a><li><li><a href="oauthids.doc.html" title="OauthIds - ">OauthIds<em>null</em></a><li><li><a href="publicuser.doc.html" title="PublicUser - ">PublicUser<em>null</em></a><li><li><a href="query.doc.html" title="Query - Query operations for Allotr API
-
-Operaciones de consulta de la API Allotr">Query<em>Query operations for Allotr API
-
-Operaciones de consulta de la API Allotr</em></a><li><li><a href="resource.doc.html" title="Resource - MongoDB/GraphQL Resource model
+Modelo embebido de Información de Usuario de notificación de MongoDB/GraphQL</em></a><li><li><a href="oauthids.doc.html" title="OauthIds - ">OauthIds<em>null</em></a><li><li><a href="publicuser.doc.html" title="PublicUser - ">PublicUser<em>null</em></a><li><li><a href="query.doc.html" title="Query - ">Query<em>null</em></a><li><li><a href="resource.doc.html" title="Resource - MongoDB/GraphQL Resource model
 
 Modelo de Recurso de MongoDB/GraphQL">Resource<em>MongoDB/GraphQL Resource model
 
@@ -418,7 +370,7 @@ Un subconjunto de la información del recurso para mostrar el estado actual del 
 
 Modelo de Notificación de Recurso de MongoDB/GraphQL">ResourceNotification<em>MongoDB/GraphQL Resource Notification model
 
-Modelo de Notificación de Recurso de MongoDB/GraphQL</em></a><li><li><a href="resourceupdate.doc.html" title="ResourceUpdate - ">ResourceUpdate<em>null</em></a><li><li><a href="resourceuser.doc.html" title="ResourceUser - ">ResourceUser<em>null</em></a><li><li><a href="resourceview.doc.html" title="ResourceView - ">ResourceView<em>null</em></a><li><li><a href="ticket.doc.html" title="Ticket - MongoDB/GraphQL Ticket embedded model that stores the state machine status for a given user
+Modelo de Notificación de Recurso de MongoDB/GraphQL</em></a><li><li><a href="resourceupdate.doc.html" title="ResourceUpdate - ">ResourceUpdate<em>null</em></a><li><li><a href="resourceuser.doc.html" title="ResourceUser - ">ResourceUser<em>null</em></a><li><li><a href="resourceview.doc.html" title="ResourceView - ">ResourceView<em>null</em></a><li><li><a href="subscription.doc.html" title="Subscription - ">Subscription<em>null</em></a><li><li><a href="ticket.doc.html" title="Ticket - MongoDB/GraphQL Ticket embedded model that stores the state machine status for a given user
 
 Modelo embebido de Ticket de MongoDB/GraphQL que guarda el estado de la máquina de estados para un usuario">Ticket<em>MongoDB/GraphQL Ticket embedded model that stores the state machine status for a given user
 
