feat: add C4 diagram

--- a/index.html
+++ b/index.html
@@ -322,6 +322,12 @@
                 <i class="material-icons slds-button__icon slds-button__icon--rigth">open_in_new</i>
             </span></span></a>
         </div>
+        <div class="slds-col--bump-left">
+            <a class="slds-button js-toggle-navigation" target="_blank" href="ArquitecturaTFG.drawio.html">
+                <span class="slds-text-title--caps">C4 Architecture Model<span>
+                <i class="material-icons slds-button__icon slds-button__icon--rigth">open_in_new</i>
+            </span></span></a>
+        </div>
         <div>
         <button class="slds-button js-toggle-navigation less-than-medium">
             <i class="material-icons slds-button__icon slds-button__icon--left">menu</i>
